# paf21-1

./: .gitattributes  .gitignore  README.md  code-review.csv  launch.sh  setup_simulator.sh  shutdown.sh
components/: README.md  carla-images-build.yml  carla-rosbridge-compose.yml  carla-sim-build.yml  compile_run.sh  custom_rosbridge_startup.launch  driving-components-build.yml  integration-tests-compose.yml  integration-tests-startup.sh  log_and_stop.sh  (+3 more)
components/local_planner/node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
components/local_planner/node/config/: config.yml  config_lane_detection.yml  config_traffic_light_detection.yml
components/local_planner/node/launch/: local_planner.launch
components/local_planner/node/src/local_planner/: __init__.py  brake_mechanism.py  driving.py  lane_detection.py  line_highlighting.py  main.py  map_provider.py  navigation.py  neural_network_tl.py  preprocessing.py  ros_msg_adapter.py  route_planner.py  speed_state_machine.py  state_maschine.py  testLokalPlanner.py  traffic_light_data.tar.xz  traffic_light_detection.py  train_traffic_light_detectionl.py  trajectory_planner.py  weights.h5
components/local_planner/node/src/local_planner/config/: town_spawns.py
components/local_planner/node/src/local_planner/core/: __init__.py  annotated_wp.py  geometry.py  route_augmentation.py  singleton_template.py  vehicle.py
components/local_planner/node/src/local_planner/object_processing/: __init__.py  kalman_filter.py  object_handler.py  object_meta.py
components/local_planner/node/src/local_planner/route_planning/: route_annotation.py  route_interpolation.py  route_planner.py  xodr_converter.py
components/local_planner/node/src/local_planner/stateMaschine/: maneuver_state_machine.py  speed_state_machine.py
components/local_planner/node/src/local_planner/state_machine/: __init__.py  maneuver_state_machine.py  speed_state_machine.py
components/local_planner/node/src/local_planner/traffic_light_detection/: __init__.py  tiny_res_net.py  traffic_light_detection.py  weights.h5
components/local_planner/node/src/local_planner/vehicle_control/: __init__.py  curve_detection.py  driving_control.py  geometry.py  steering.py  vehicle.py
components/local_planner/node/src/tests/test_local_planner/: test_geometry.py  test_local_planner.py  test_road_detection.py  test_route_planner.py  test_shortest_path.py  test_speed_states.py  test_state_machine.py
components/perception/node/: CMakeLists.txt  package.xml  setup.py
components/perception/node/config/: detection_config.yml  tld_config.yml  vehicle_config.yml
components/perception/node/launch/: perception.launch
components/perception/node/src/perception/: __init__.py  base_detector.py  main.py  ros_msg_adapter.py
components/perception/node/src/perception/object_detection/: README.md  __init__.py  obj_detection.py  obj_info.py  object_detection.py  object_detection_coordinates.py  object_tracker.py
components/perception/node/src/perception/traffic_light_detection/: README.md  __init__.py  model_and_weights.h5  preprocessing.py  tl_detection.py  tld_info.py  tld_training.py
components/perception/node/src/tests/test_traffic_light_detection/: test_tld.py
components/test_simple_driving/node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
components/test_simple_driving/node/launch/: test_simple_driving.launch
components/test_simple_driving/node/src/test_simple_driving/: driving.py
components/traffic_light_detection/node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
components/traffic_light_detection/node/config/: tld_config.yml
components/traffic_light_detection/node/launch/: traffic_light_detection.launch
components/traffic_light_detection/node/src/tests/test_traffic_light_detection/: test_tld.py
components/traffic_light_detection/node/src/traffic_light_detection/: README.md  __init__.py  detection.py  main.py  model_and_weights.h5  ros_msg_adapter.py  tld_training.py
components/vehicle_control/node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
components/vehicle_control/node/launch/: vehicle_control.launch
components/vehicle_control/node/nav_srvs/: CMakeLists.txt  package.xml
components/vehicle_control/node/src/tests/test_vehicle_control/: test_geometry.py  test_road_detection.py  test_route_planner.py  test_shortest_path.py  test_speed_states.py  test_state_machine.py
components/vehicle_control/node/src/vehicle_control/: __init__.py  main.py  map_provider.py  navigation.py  ros_msg_adapter.py  trajectory_planner.py
components/vehicle_control/node/src/vehicle_control/config/: town_spawns.py
components/vehicle_control/node/src/vehicle_control/core/: __init__.py  annotated_wp.py  vehicle.py
components/vehicle_control/node/src/vehicle_control/driving/: README.md  __init__.py  curve_detection.py  driving_control.py  steering.py
components/vehicle_control/node/src/vehicle_control/object_processing/: README.md  __init__.py  object_handler.py  object_meta.py  obstacle_observer.py
components/vehicle_control/node/src/vehicle_control/route_planning/: README.md  main.py  route_annotation.py  route_interpolation.py  route_planner.py  shortest_paths.py  xodr_converter.py
components/vehicle_control/node/src/vehicle_control/state_machine/: README.md  __init__.py  maneuver_state_machine.py  speed_state_machine.py
components/vehicle_control/node/src/vehicle_control/vehicle_control/: __init__.py  driving_control.py  steering.py
components/vehicle_controller/node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
components/vehicle_controller/node/launch/: vehicle_controller.launch
components/vehicle_controller/node/src/tests/test_vehicle_controller/: test_driving_controller.py  test_ros_message_adapter.py  test_vehicle_controller.py
components/vehicle_controller/node/src/vehicle_controller/: driving.py  driving_control.py  main.py  perception.py  ros_msg_adapter.py  vehicle.py
ros_nodes/test_subscriber_camera/node/: CMakeLists.txt  package.xml
ros_nodes/test_subscriber_camera/node/src/test_subscriber_camera/: core.py
(+165 files in other folders)
