<?xml version="1.0"?>
<package format="3">
  <name>traffic_light_detection</name>
  <version>0.0.1</version>
  <description>A package for image perception tasks to detect traffic lights</description>
  <maintainer email="info@informatik.uni-augsburg.de">University of Augsburg - Chair of Mechatronics</maintainer>
  <license>MIT</license>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>